assets/css/style.css
* {
    box-sizing: inherit;       
}

html, body {
    height: 100%; /* sticky */
    margin: 0;
    box-sizing: border-box;
}

body {
    background: url("../images/creampaper.png");
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #777;
    line-height: 150%;
}

#wrap { /* sticky */
    min-height: 100%;
    padding-bottom: 20px;
    width: 100%;
}

#main-content {
    width: 960px;
    margin: 0 auto;
    padding-bottom: 70px; /* sticky */
}

#main-content section {
    background-color: #fff;
    padding: 20px;
    border: 2px solid #ddd;

}

header {
    border-bottom: 2px solid #aaa;
    background-color: #fff;
    margin-bottom: 20px;
    min-width: 960px;
}

#header-content {
    width: 960px;
    position: relative;
    margin: 0 auto;
    display: block;
}

nav {
    position: absolute;
    top: 10px;
    right: 20px;
}

ul {
    display: block;
    }

nav li {
    text-align: center;
    margin: 10px;
}

#about {
    width: 650px;
    display: inline-block;
}

#about img {
    float: left;
    margin: 0 20px 20px 0;
    width: 250px;
}

#contact {
    width: 650px;
    display: inline-block;
}

#portfolio {
    width: 650px;
    display: inline-block;
}

#portfolio li {
    margin: 25px;
    }

.project p {
    display: block;
    width: 250px;
    padding: 15px 0;
    margin-top: -70px;
    background-color: #4aaaa5;
    text-align: center;
    color: white;
    position: absolute;
}

#connect {
    width: 270px;
    text-align: center;
    float: right;
}

footer {
    padding: 20px 0;
    height: 70px; /* sticky */
    border-top: solid 4px #4aaaa5;
    background-color: #666;
    font-size: small;
    color: #bbb;
    text-align: center;
    margin-top: -70px; /* sticky */
    min-width: 960px;
    overflow: auto;
}

#about p {
    margin: .5em 0;
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover {
    color: #4aaaa5;
}

li {
    list-style: none;
    display: inline-block;
}

h1 {
    padding: 20px;
    width: 9em;
    text-align: center;
    margin-bottom: 0;
    background-color: #4aaaa5;
    color: #777;
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: xx-large;
    color: #fff;
}

h2 {
    font-family: 'Georgia', Times, Times New Roman, serif;
    color: #4aaaa5;
    font-size: x-large;
    margin-bottom: 20px;
    border-bottom: solid 2px #ddd;
    width:100%;
    padding-bottom: 20px;    
}

input[type=text], input[type=email], textarea {
    width: 98%;
    padding: 5px;
    border: solid 1px #ddd;
    color: #777;
}

textarea {
    height: 200px;
    resize: none;
    margin-bottom: 0;
    overflow: auto;
}

input[type=submit] {
    width: 100px;
    background-color: #4aaaa5;
    color: white;
    border: none;
    height: 40px;
    font-size: medium;
}

@media screen and (max-width: 980px) {
    #main-content, #about, #about img, #connect, #portfolio, #contact, footer {
        width: 100%;
        min-width: initial;
    }

    #wrap {
        width: 600px;
    }
    
    #header-content {
        padding: 0 20px;
        float: left;
    }

    #main-content {
        padding: 0 20px 70px;
    }

    #connect {
        margin: 20px 0;
    }
}

@media screen and (max-width: 768px) {

    /* can't get nav to slide into line,
        can't get projects to center */
    
     #main-content, #about, #connect, #portfolio, #contact, footer {
        width: 100%;
        min-width: initial;
    }

    body {
        min-width: 400px;
    }

    #main-content {
        padding: 0 20px 70px;
    }

    #connect {
        margin: 20px 0;
        text-align: initial;
    }
}

@media screen and (max-width: 640px) {

    /* portfolio projects not scaling well */

    header, #header-content, #main-content, #about, #about img, #connect, #portfolio, #contact, footer {
        width: 100%;
        min-width: initial;
    }

    #wrap {
        width: 100%;
    }

    #main-content {
        padding: 0 20px 70px;
    }

    nav {
        position: relative;
        left: 0;
        top: 0;
        width: 100%;    
        text-align: center;        
    }

    nav li {
        width: 25%;
    }

    .project {
        width: 100%;
        margin: 0;
    }

    .project img {
        width: 100%;
    }

    #portfolio p {
        width: 84%;
        height: 50px;
    }

    #portfolio li {
        margin: 0 0 20px 0;
    }

    #connect {
        margin: 20px 0;
        text-align: initial;
    }

    h1 {text-align: center;
        width: 100%;
    }
}

